# nbkits

./: .gitignore  pyproject.toml
src/nbkits/: __init__.py  _version.py  display.py  utils.py  xlstyler.py
tests/: test_borders.py  test_borders.xlsx  test_excel.py  test_format.py  test_format.xlsx
