[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nbkits"
description = "A short description of your package"
authors = [
    { name="Chenggong Lyu", email="lcgong@gmail.com" }
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["nbkits"]

[tool.setuptools.package-dir]
"" = "src"

# [tool.setuptools.packages.find]
# where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
