[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nbkits"
dynamic = ["version"]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A toolkit for jupyter's notebook"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lcgong/nbkits"
"Bug Tracker" = "https://github.com/lcgong/nbkits/issues"

[tool.setuptools_scm]
write_to = "src/nbkits/_version.py"

[project.optional-dependencies]
dev = [
    "pytest",
    "tox",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true

[testenv]
deps = pytest
commands =
    pytest
"""