[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nbkits"
dynamic = ["version"]
authors = [{ name = "Lyu, Chenggong", email = "lcgong@gmail.com" }]
description = "A toolkit for jupyter's notebook"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = ["matplotlib>=3.8", "ipython>=8.0", "openpyxl>=3.1"]

[project.urls]
"Homepage" = "https://github.com/lcgong/nbkits"
"Bug Tracker" = "https://github.com/lcgong/nbkits/issues"


[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["pytest", "tox"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true

[testenv]
deps = pytest
commands =
    pytest
"""
